--- a/src/app/usuarios/change-password/change-password.component.html
+++ b/src/app/usuarios/change-password/change-password.component.html
@@ -1,13 +1,13 @@
-<app-modal>
+<p-card class="login">
   <form [formGroup]="fg">
     <div class="form__group.m-t-10">
-      <am-input class="w-100" label="Usuario" [fg]="fg" control="usuario" placeholder="Usuario" [disabled]="true"></am-input>
+      <png-input-text class="w-full mt-1" label="Usuario" [fg]="fg" control="usuario" [required]="true" autocomplete="off"></png-input-text>
     </div>
     <div class="form__group">
-      <am-input class="w-100" label="Nueva Contraseña" type="password" [fg]="fg" control="contrasena" placeholder="Nueva Contraseña" [required]="true" autocomplete="off"></am-input>
+      <png-password class="w-100" [fg]="fg" control="password" label="Nueva Contraseña" [required]="true" autocomplete="off"></png-password>
     </div>
     <div class="form__group">
-      <am-input class="w-100" label="Confirmar Contraseña" type="password" [fg]="fg" control="contrasenaConfirm" placeholder="Confirmar Contraseña" [required]="true" autocomplete="off"></am-input>
+      <png-password class="w-100" [fg]="fg" control="contrasenaConfirm" label="Confirmar Contraseña" [required]="true" autocomplete="off"></png-password>
     </div>
   </form>
-</app-modal>
+</p-card>
