--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -2,13 +2,13 @@
 @import './app/variables.scss';
 @import './app/mixin.scss';
 @import './app/main.scss';
-@import './app/layouts.scss';
+// @import './app/layouts.scss';
 @import './app/form.scss';
 @import './app/button.scss';
 @import './app/list-items.scss';
 @import './app/navigation.scss';
 @import './app/tooltips.scss';
-@import './app/spinner.scss';
+// @import './app/spinner.scss';
 @import './app/sweetalert.scss';
 
 // external styles
