Se corrigen estilos en la App.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="page-content">
   <div class="top-menu" *ngIf="authenticated">
-    <p-menubar class="w-100" [model]="menu">
+    <p-menubar class="w-full" [model]="menu">
       <ng-template pTemplate="end">
         <app-usuario-info></app-usuario-info>
       </ng-template>
