--- a/src/app/shared/ui/list-item/list-item.component.html
+++ b/src/app/shared/ui/list-item/list-item.component.html
@@ -1,6 +1,6 @@
 <div class="content">
   <div class="item">
-    <png-panel class="h-100" [header]="title">
+    <png-panel class="h-full" [header]="title">
       <div class="item__container b-r-5">
         <ng-content></ng-content>
       </div>
