--- a/src/app/concilia-contabilidad/concilia-contabilidad.component.html
+++ b/src/app/concilia-contabilidad/concilia-contabilidad.component.html
@@ -7,15 +7,15 @@
         <png-card>
           <png-radio-button [fg]="fg" control="tipoCentro" [items]="tipoCentrosValues"></png-radio-button>
         </png-card>
-        <div class="unidad-container flex m-l-20" layout="column">
+        <div class="unidad-container flex flex-column ml-3">
           <div class="form__group">
-            <png-dropdown class="w-100" [fg]="fg" control="idCentro" label="Centro" labelWidth="100" [optionsValues]="centrosValues" placeholder="Seleccione el Centro" [filter]="true" [required]="true" [showClear]="true"></png-dropdown>
+            <png-dropdown class="w-full" [fg]="fg" control="idCentro" label="Centro" labelWidth="100" [optionsValues]="centrosValues" placeholder="Seleccione el Centro" [filter]="true" [required]="true" [showClear]="true"></png-dropdown>
           </div>
           <div class="form__group">
-            <png-dropdown class="w-100" [fg]="fg" control="tipoEntidad" label="Tipo de Centro" labelWidth="100" [optionsValues]="tipoEntidadValues" placeholder="Tipo de Centro" [disabled]="true"></png-dropdown>
+            <png-dropdown class="w-full" [fg]="fg" control="tipoEntidad" label="Tipo de Centro" labelWidth="100" [optionsValues]="tipoEntidadValues" placeholder="Tipo de Centro" [disabled]="true"></png-dropdown>
           </div>
           <div class="form__group">
-            <png-calendar class="w-100" [fg]="fg" label="Período" labelWidth="100" control="periodo" view="month" dateFormat="MM/yy" [required]="true"></png-calendar>
+            <png-calendar class="w-full" [fg]="fg" label="Período" labelWidth="100" control="periodo" view="month" dateFormat="MM/yy" [required]="true"></png-calendar>
           </div>
         </div>
       </div>
@@ -38,7 +38,7 @@
     </div>
     <div class="item__footer mt-2">
       <png-split-button class="mr-1" label="Conciliar" icon="mdi mdi-file-check-outline" [items]="buttonConciliarItems" [disabled]="!fg.valid" (clicked)="conciliar()"></png-split-button>
-      <png-button class="m-r-10" label="Reporte" [style]="'secondary'" icon="mdi mdi-printer" [disabled]="!dataSourceAsientos.length &amp;&amp; !dataSourceClasificador.length" (clicked)="reporte()"></png-button>
+      <png-button class="mr-2" label="Reporte" [style]="'secondary'" icon="mdi mdi-printer" [disabled]="!dataSourceAsientos.length &amp;&amp; !dataSourceClasificador.length" (clicked)="reporte()"></png-button>
     </div>
   </png-panel>
 </div>
