--- a/src/app/usuarios/change-password/change-password.component.html
+++ b/src/app/usuarios/change-password/change-password.component.html
@@ -1,13 +1,13 @@
 <p-card class="login">
   <form [formGroup]="fg">
-    <div class="form__group.m-t-10">
+    <div class="form__group.mt-2">
       <png-input-text class="w-full mt-1" label="Usuario" [fg]="fg" control="usuario" [required]="true" autocomplete="off"></png-input-text>
     </div>
     <div class="form__group">
-      <png-password class="w-100" [fg]="fg" control="password" label="Nueva Contraseña" [required]="true" autocomplete="off"></png-password>
+      <png-password class="w-full" [fg]="fg" control="password" label="Nueva Contraseña" [required]="true" autocomplete="off"></png-password>
     </div>
     <div class="form__group">
-      <png-password class="w-100" [fg]="fg" control="contrasenaConfirm" label="Confirmar Contraseña" [required]="true" autocomplete="off"></png-password>
+      <png-password class="w-full" [fg]="fg" control="contrasenaConfirm" label="Confirmar Contraseña" [required]="true" autocomplete="off"></png-password>
     </div>
   </form>
 </p-card>
