--- a/src/assets/styles/app/main.scss
+++ b/src/assets/styles/app/main.scss
@@ -56,3 +56,12 @@ body {
         }
     }
 }
+
+.content {
+    position: relative;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    padding: 10px;
+    background-color: $color-white;
+}
