--- a/src/app/conexion-rodas/estado-conexion/estado-conexion.component.html
+++ b/src/app/conexion-rodas/estado-conexion/estado-conexion.component.html
@@ -8,7 +8,7 @@
     <png-card class="chequea-conexion-detalle m-5">
       <png-table [columns]="columns" [data]="dataSource" [canEditDelete]="false"></png-table>
     </png-card>
-    <div class="item__footer mt-2">
+    <div class="flex justify-content-end mt-2">
       <png-button class="mr-2 mb-2" label="Conciliar" icon="pi-check" tooltip="Calcular la Conciliación." [raised]="true" [disabled]="!fg.valid" (clicked)="calcular()"></png-button>
       <png-button class="mr-2 mb-2" label="Reporte" [style]="'secondary'" [raised]="true" icon="pi-print" [disabled]="dataSource.length === 0" (clicked)="reporte()"></png-button>
     </div>
