--- a/src/app/shared/ui/add-edit-item/add-edit-item.component.html
+++ b/src/app/shared/ui/add-edit-item/add-edit-item.component.html
@@ -4,7 +4,7 @@
       <ng-content></ng-content>
     </div>
   </png-card>
-  <div class="item__footer">
+  <div class="flex justify-content-end">
     <png-button class="mr-2 mb-2" label="Aceptar" [style]="'primary'" [raised]="true" [disabled]="fg && !fg.valid" (clicked)="save()"></png-button>
     <png-button class="mr-2 mb-2" label="Cancelar" [style]="'secondary'" [raised]="true" (clicked)="cancel()"></png-button>
   </div>
