--- a/src/app/shared/ui/prime-ng/prime-ng.scss
+++ b/src/app/shared/ui/prime-ng/prime-ng.scss
@@ -196,6 +196,12 @@ p-slidemenu {
 }
 
 .p-card {
+    .p-card-title {
+        font-size: 1.2em !important;
+        margin-bottom: 0 !important;
+        padding: 0.5em !important;
+    }
+
     .p-card-body {
         padding: 0 !important;
     }
